// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading, Team Formation and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
<DocumentFragment>
  <div
    class="bp6-navbar NavigationBar secondary-navbar"
  >
    <div
      class="bp6-navbar-group bp6-align-left"
    >
      <a
        class=""
        data-discover="true"
        href="/courses/0/missions"
        title="Missions"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-flame"
            data-icon="flame"
          />
          <span
            class="bp6-button-text"
          >
            Missions
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/quests"
        title="Quests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-lightbulb"
            data-icon="lightbulb"
          />
          <span
            class="bp6-button-text"
          >
            Quests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/paths"
        title="Paths"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-predictive-analysis"
            data-icon="predictive-analysis"
          />
          <span
            class="bp6-button-text"
          >
            Paths
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/contests"
        title="Contests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-comparison"
            data-icon="comparison"
          />
          <span
            class="bp6-button-text"
          >
            Contests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/others"
        title="Others"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-manual"
            data-icon="manual"
          />
          <span
            class="bp6-button-text"
          >
            Others
          </span>
        </button>
      </a>
    </div>
    <div
      class="bp6-navbar-group bp6-align-right"
    />
  </div>
</DocumentFragment>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Grading, Team Formation and AdminPanel NavLinks render for Role.Admin 1`] = `
<DocumentFragment>
  <div
    class="bp6-navbar NavigationBar secondary-navbar"
  >
    <div
      class="bp6-navbar-group bp6-align-left"
    >
      <a
        class=""
        data-discover="true"
        href="/courses/0/missions"
        title="Missions"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-flame"
          >
            <svg
              data-icon="flame"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.217 0q0 2.052 1.104 3.282Q14 6.154 14 9.846 14 13.948 9.585 16c2.165-2.4 1.84-3.385-.368-6.4-2.342 1.2-1.967 2-1.592 3.6-.786 0-1.5 0-1.875-.4 0 .547.898 2 1.464 3.2-2.943-.82-6.092-5.744-4.988-6.154q1.104-.41 2.575.41Q2.962 2.872 9.217 0"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Missions
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/quests"
        title="Quests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-lightbulb"
          >
            <svg
              data-icon="lightbulb"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1m1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1m-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Quests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/paths"
        title="Paths"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-predictive-analysis"
          >
            <svg
              data-icon="predictive-analysis"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M16 6.41c0-1.01-.49-1.94-1.29-2.49-.43-1.92-2.07-3.28-4-3.28-.46 0-.92.08-1.35.24C8.83.31 8.11 0 7.34 0c-.9 0-1.74.44-2.28 1.16-.12-.01-.24-.02-.36-.02-1.31 0-2.42.89-2.77 2.17C.78 3.72 0 4.84 0 6.13c0 .38.07.76.21 1.12C.07 7.6 0 7.98 0 8.36c0 1.11.58 2.11 1.51 2.63.54.56 1.27.87 2.03.87.49 0 .95-.12 1.37-.36a2.85 2.85 0 0 0 2.18 1.04c.52 0 1.03-.14 1.47-.42.49.39 1.07.65 1.69.73 1.04 1.15 1.84 2.63 1.84 2.64 0 0 .28.49.26.49.77 0 1.41-.16 1.32-1.04 0 .02-.73-2.31-.73-2.31.41-.21.75-.55.97-.98.9-.52 1.47-1.53 1.47-2.61 0-.24-.03-.48-.08-.71.45-.52.7-1.21.7-1.92m-1.23 1.02-.15-.16-.61-.67c-.27-.29-.54-.94-.58-1.39l-.1-1.01c-.05-.59-.94-.58-.91.11 0 .02.1 1.01.1 1.01.03.29.12.62.24.93-.06-.01-.12-.02-.18-.02 0 0-2.06-.1-2.05-.11-.58-.02-.71.97-.04 1l2.05.11c.42.02 1.04.3 1.29.58l.49.54.02.05c.08.21.12.44.12.66 0 .74-.41 1.41-1.07 1.75l-.16.08-.07.18c-.15.38-.48.66-.88.74l-.54.11.7 2.2c-.38-.61-.95-1.43-1.62-2.14l-.12-.13-.17-.01c-.41-.03-.8-.17-1.14-.38l1.36-1.18c.35-.31.83-.44.99-.39 0 0 .63.17.62.18.63.16.83-.74.23-.97l-.62-.18c-.55-.16-1.33.18-1.79.58l-1.53 1.33-.31.26c-.35.29-.75.44-1.2.44-.64 0-1.23-.33-1.58-.86V9.15c0-.4.17-.79.27-.85 0 0 .52-.34.51-.35.71-.53.18-1.23-.49-.89 0-.01-.52.35-.52.35-.26.15-.45.44-.58.77-.11-.11-.22-.2-.34-.28 0 0-1.53-1.01-1.53-1.02-.65-.45-1.2.51-.49.89 0-.01 1.51 1.02 1.51 1.02.37.24.62.78.62 1.09v.67c-.34.19-.63.29-.99.29-.54 0-1.05-.23-1.41-.63l-.05-.06-.07-.04c-.65-.34-1.05-1-1.05-1.73 0-.3.07-.6.2-.87l.12-.25L1.15 7c-.13-.27-.2-.56-.2-.87 0-.9.61-1.68 1.48-1.89l.31-.08.05-.34a1.926 1.926 0 0 1 2.38-1.58l.32.08.18-.31c.35-.6.99-.97 1.67-.97.44 0 .86.15 1.2.42l-.36.36v-.01l-.25.26c-.33.27-.74.42-.89.4 0 0-.67-.1-.67-.11-.67-.13-.87.86-.14 1.02.01 0 .67.11.67.11.02 0 .05 0 .07.01-.11.37-.15.77-.1 1.12 0 0 .17.99.15.99.11.52 1.06.36.93-.18 0-.01-.15-.99-.15-.99-.05-.37.12-.94.36-1.19l.39-.4c.05-.05.1-.09.15-.14l.74-.76c.4-.18.83-.27 1.27-.27 1.55 0 2.86 1.12 3.11 2.67l.04.25.21.12c.61.35.98 1 .98 1.7 0 .36-.1.7-.28 1.01"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Paths
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/contests"
        title="Contests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-comparison"
          >
            <svg
              data-icon="comparison"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.99-.01c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1s1-.45 1-1v-14c0-.55-.45-1-1-1m-3 3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m10 0h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m0 3h-4v-2h4zm0 3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m0 3h-4v-2h4zm-10-3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Contests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/others"
        title="Others"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-manual"
          >
            <svg
              data-icon="manual"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06s.03.04.05.06c.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Others
          </span>
        </button>
      </a>
    </div>
    <div
      class="bp6-navbar-group bp6-align-right"
    >
      <a
        class=""
        data-discover="true"
        href="/courses/0/groundcontrol"
        title="Ground Control"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-satellite"
            data-icon="satellite"
          />
          <span
            class="bp6-button-text"
          >
            Ground Control
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/dashboard"
        title="Dashboard"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-globe"
          >
            <svg
              data-icon="globe"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M4.45 7.83c-.26 0-.41.21-.41.46v1.75c0 .26.16.46.41.46h.29v1.77c0 .25.24.45.49.45s.49-.2.49-.45V11.2h-.01c.26 0 .44-.14.44-.4v-.3h.14c.26 0 .43-.2.43-.46v-.59s.01-.01 0-.01l-1.58-1.6h-.69zM8.51 3.9h.22c.06 0 .12-.01.12-.07s-.05-.07-.12-.07h-.22c-.06 0-.12.01-.12.07.01.06.06.07.12.07m-2.33-.05c.07-.07.07-.19 0-.26l-.5-.5a.187.187 0 0 0-.26 0c-.07.07-.07.19 0 .26l.5.5c.07.07.19.07.26 0m3.06.89c.07 0 .14-.06.14-.12v-.31c0-.07-.07-.12-.14-.12s-.14.06-.14.12v.31c0 .07.07.12.14.12M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-.55.1-1.07.23-1.57h.11v.47c0 .2.18.37.39.37.03 0 .08-.01.11-.02l.78.77c.08.08.2.08.28 0s.08-.2 0-.28l-.75-.78c0-.02.04-.04.04-.06v-.12c0-.16.09-.22.25-.36h.46c.09 0 .17-.01.24-.05h.02c.02-.01.03-.02.05-.03.01-.01.01-.01.02-.01l.02-.02 1.59-1.58c.18-.18.18-.46 0-.64s-.47-.15-.65.03l-.3.34h-.57v-.48c0-.01.05.05.05-.09h.64c.12 0 .22-.09.22-.21s-.1-.21-.22-.21H4.1c.18-.15.34-.31.54-.44l.01-.01c.21-.14.45-.25.68-.37.15-.07.29-.15.44-.21.17-.07.35-.11.53-.17.18-.05.35-.12.53-.16a6.05 6.05 0 0 1 3.47.35c.05.02.1.05.16.08.25.11.48.24.71.39.25.16.49.34.71.55H10.6s0-.03-.01-.03c-.04 0-.09 0-.13.03l-.51.51a.17.17 0 0 0 0 .23c.06.06.17.06.23 0l.42-.44.01-.02h.25c0 .14-.07.09-.07.12v.07c0 .22-.15.37-.36.37h-.38c-.19 0-.38.21-.38.4v.17h-.1c-.12 0-.2.06-.2.18v.25h-.23c-.17 0-.3.11-.3.28s.13.26.3.26c.07 0 .14.03.19-.11l.04.01.49-.46h.17l.39.37c.03.03.08.02.12-.01.03-.03.03-.12 0-.15l-.32-.35h.23l.09.12c.18.18.48.17.66-.01l.09-.1h.4c.02 0 .08.05.08.05v.24l-.05-.01h-.36c-.11 0-.21.1-.21.21s.09.21.21.21h.41v.15c-.14.21-.24.42-.45.42h-.94v-.01l-.44-.44a.47.47 0 0 0-.66 0l-.42.43v.01H8.6c-.26 0-.49.21-.49.46v.92c0 .26.23.45.49.45h.9c.34.14.57.35.72.69v1.68c0 .26.17.44.42.44h.72c.26 0 .4-.18.4-.44V9l.89-.86.03-.02.02-.01h.03c.07-.08.15-.19.15-.31v-.91c0-.18-.16-.32-.31-.46H13c.01.28.21.42.46.42h.42c.08.37.12.76.12 1.15 0 3.31-2.69 6-6 6m4.54-4.27c-.1 0-.21.08-.21.18v.57c0 .1.11.18.21.18s.21-.08.21-.18v-.57c0-.1-.11-.18-.21-.18M8.37 3.19c0-.25-.2-.42-.46-.42h-.54c-.25 0-.42.18-.42.43 0 .03-.1.04.05.08v.47c0 .15.06.27.21.27s.21-.12.21-.27v-.14h.5c.24 0 .45-.16.45-.42"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Dashboard
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/sourcereel"
        title="Sourcereel"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-mobile-video"
          >
            <svg
              data-icon="mobile-video"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M15 4c-.28 0-.53.11-.71.29L12 6.59V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V9.41l2.29 2.29c.18.19.43.3.71.3.55 0 1-.45 1-1V5c0-.55-.45-1-1-1"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Sourcereel
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/teamformation"
        title="Team Formation"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-form"
          >
            <svg
              data-icon="form"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M2 11v2h2v-2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1m9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1M6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1m4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Team Formation
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/grading"
        title="Grading"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-endorsed"
          >
            <svg
              data-icon="endorsed"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="m15.86 7.5-.81-1.42V4.5c0-.36-.19-.68-.49-.87l-1.37-.8-.81-1.41c-.19-.31-.51-.49-.86-.49H9.89L8.5.14a.95.95 0 0 0-1 0l-1.39.8H4.52a1 1 0 0 0-.86.49l-.8 1.37-1.44.83c-.3.19-.49.51-.49.87v1.65l-.8 1.37c-.08.15-.13.32-.13.49s.05.34.14.49l.8 1.37v1.65c0 .36.19.68.49.87l1.42.81.8 1.37c.19.31.51.49.86.49H6.1l1.39.8c.15.09.32.14.48.14s.34-.05.49-.14l1.39-.8h1.63a1 1 0 0 0 .86-.49l.81-1.41 1.37-.8c.3-.19.49-.51.49-.87V9.93l.81-1.42a.89.89 0 0 0 .04-1.01m-4.12-.82-4.01 4.01c-.18.18-.43.29-.71.29s-.53-.11-.71-.29l-2-2c-.18-.19-.3-.44-.3-.71a1.003 1.003 0 0 1 1.71-.71l1.3 1.3 3.3-3.3a1.003 1.003 0 0 1 1.71.71.95.95 0 0 1-.29.7"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Grading
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/gamesimulator"
        title="Game Simulator"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-crown"
          >
            <svg
              data-icon="crown"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="m2 6 3 2 3-4 3 4 3-2-1 6H3zm6-5a1 1 0 1 1 0 2 1 1 0 0 1 0-2M1 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2m14 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2M3 13h10v2H3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Game Simulator
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/adminpanel"
        title="Admin Panel"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-settings"
            data-icon="settings"
          />
          <span
            class="bp6-button-text"
          >
            Admin Panel
          </span>
        </button>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MissionControl, GroundControl, Sourcereel, GameSimulator, Dashboard, Team Formation and Grading NavLinks render for Role.Staff 1`] = `
<DocumentFragment>
  <div
    class="bp6-navbar NavigationBar secondary-navbar"
  >
    <div
      class="bp6-navbar-group bp6-align-left"
    >
      <a
        class=""
        data-discover="true"
        href="/courses/0/missions"
        title="Missions"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-flame"
          >
            <svg
              data-icon="flame"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.217 0q0 2.052 1.104 3.282Q14 6.154 14 9.846 14 13.948 9.585 16c2.165-2.4 1.84-3.385-.368-6.4-2.342 1.2-1.967 2-1.592 3.6-.786 0-1.5 0-1.875-.4 0 .547.898 2 1.464 3.2-2.943-.82-6.092-5.744-4.988-6.154q1.104-.41 2.575.41Q2.962 2.872 9.217 0"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Missions
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/quests"
        title="Quests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-lightbulb"
          >
            <svg
              data-icon="lightbulb"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1m1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1m-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Quests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/paths"
        title="Paths"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-predictive-analysis"
          >
            <svg
              data-icon="predictive-analysis"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M16 6.41c0-1.01-.49-1.94-1.29-2.49-.43-1.92-2.07-3.28-4-3.28-.46 0-.92.08-1.35.24C8.83.31 8.11 0 7.34 0c-.9 0-1.74.44-2.28 1.16-.12-.01-.24-.02-.36-.02-1.31 0-2.42.89-2.77 2.17C.78 3.72 0 4.84 0 6.13c0 .38.07.76.21 1.12C.07 7.6 0 7.98 0 8.36c0 1.11.58 2.11 1.51 2.63.54.56 1.27.87 2.03.87.49 0 .95-.12 1.37-.36a2.85 2.85 0 0 0 2.18 1.04c.52 0 1.03-.14 1.47-.42.49.39 1.07.65 1.69.73 1.04 1.15 1.84 2.63 1.84 2.64 0 0 .28.49.26.49.77 0 1.41-.16 1.32-1.04 0 .02-.73-2.31-.73-2.31.41-.21.75-.55.97-.98.9-.52 1.47-1.53 1.47-2.61 0-.24-.03-.48-.08-.71.45-.52.7-1.21.7-1.92m-1.23 1.02-.15-.16-.61-.67c-.27-.29-.54-.94-.58-1.39l-.1-1.01c-.05-.59-.94-.58-.91.11 0 .02.1 1.01.1 1.01.03.29.12.62.24.93-.06-.01-.12-.02-.18-.02 0 0-2.06-.1-2.05-.11-.58-.02-.71.97-.04 1l2.05.11c.42.02 1.04.3 1.29.58l.49.54.02.05c.08.21.12.44.12.66 0 .74-.41 1.41-1.07 1.75l-.16.08-.07.18c-.15.38-.48.66-.88.74l-.54.11.7 2.2c-.38-.61-.95-1.43-1.62-2.14l-.12-.13-.17-.01c-.41-.03-.8-.17-1.14-.38l1.36-1.18c.35-.31.83-.44.99-.39 0 0 .63.17.62.18.63.16.83-.74.23-.97l-.62-.18c-.55-.16-1.33.18-1.79.58l-1.53 1.33-.31.26c-.35.29-.75.44-1.2.44-.64 0-1.23-.33-1.58-.86V9.15c0-.4.17-.79.27-.85 0 0 .52-.34.51-.35.71-.53.18-1.23-.49-.89 0-.01-.52.35-.52.35-.26.15-.45.44-.58.77-.11-.11-.22-.2-.34-.28 0 0-1.53-1.01-1.53-1.02-.65-.45-1.2.51-.49.89 0-.01 1.51 1.02 1.51 1.02.37.24.62.78.62 1.09v.67c-.34.19-.63.29-.99.29-.54 0-1.05-.23-1.41-.63l-.05-.06-.07-.04c-.65-.34-1.05-1-1.05-1.73 0-.3.07-.6.2-.87l.12-.25L1.15 7c-.13-.27-.2-.56-.2-.87 0-.9.61-1.68 1.48-1.89l.31-.08.05-.34a1.926 1.926 0 0 1 2.38-1.58l.32.08.18-.31c.35-.6.99-.97 1.67-.97.44 0 .86.15 1.2.42l-.36.36v-.01l-.25.26c-.33.27-.74.42-.89.4 0 0-.67-.1-.67-.11-.67-.13-.87.86-.14 1.02.01 0 .67.11.67.11.02 0 .05 0 .07.01-.11.37-.15.77-.1 1.12 0 0 .17.99.15.99.11.52 1.06.36.93-.18 0-.01-.15-.99-.15-.99-.05-.37.12-.94.36-1.19l.39-.4c.05-.05.1-.09.15-.14l.74-.76c.4-.18.83-.27 1.27-.27 1.55 0 2.86 1.12 3.11 2.67l.04.25.21.12c.61.35.98 1 .98 1.7 0 .36-.1.7-.28 1.01"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Paths
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/contests"
        title="Contests"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-comparison"
          >
            <svg
              data-icon="comparison"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.99-.01c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1s1-.45 1-1v-14c0-.55-.45-1-1-1m-3 3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m10 0h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m0 3h-4v-2h4zm0 3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1m0 3h-4v-2h4zm-10-3h-4c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Contests
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/others"
        title="Others"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-manual"
          >
            <svg
              data-icon="manual"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06s.03.04.05.06c.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp6-button-text"
          >
            Others
          </span>
        </button>
      </a>
    </div>
    <div
      class="bp6-navbar-group bp6-align-right"
    >
      <a
        class=""
        data-discover="true"
        href="/courses/0/dashboard"
        title="Dashboard"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-globe"
            data-icon="globe"
          />
          <span
            class="bp6-button-text"
          >
            Dashboard
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/sourcereel"
        title="Sourcereel"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-mobile-video"
            data-icon="mobile-video"
          />
          <span
            class="bp6-button-text"
          >
            Sourcereel
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/teamformation"
        title="Team Formation"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-form"
            data-icon="form"
          />
          <span
            class="bp6-button-text"
          >
            Team Formation
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/grading"
        title="Grading"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-endorsed"
            data-icon="endorsed"
          />
          <span
            class="bp6-button-text"
          >
            Grading
          </span>
        </button>
      </a>
      <a
        class=""
        data-discover="true"
        href="/courses/0/gamesimulator"
        title="Game Simulator"
      >
        <button
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-crown"
            data-icon="crown"
          />
          <span
            class="bp6-button-text"
          >
            Game Simulator
          </span>
        </button>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
